--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,3 @@
-server.port=80
-
-spring.datasource.url=jdbc:h2:file:./src/main/resources/db/generalUser
-spring.datasource.driverClassName=org.h2.Driver
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-spring.datasource.username=sa
-spring.datasource.password=
-
-spring.h2.console.enabled=true
-spring.sql.init.mode=never
-spring.jpa.hibernate.ddl-auto=update
+server.port=${SERVER_PORT}
+dbUri=${DB_URI}
+dbName=${DB_NAME}
